# Confocal

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindQt5.cmake
matlab/: ActiveContour.m  ActiveContour3D.m  libIso.prj  processActiveContour.m  removeVerticesPatch.m
src/: CMakeLists.txt  ConfocalDockWidget.cpp  ConfocalDockWidget.h  ConfocalMainWindow.cpp  ConfocalMainWindow.h  ConfocalOpenGLWidget.cpp  ConfocalOpenGLWidget.h  ConfocalSliceView.cpp  ConfocalSliceView.h  ConfocalSliceViewWidget.cpp  ConfocalSliceViewWidget.h  Data.cpp  Data.h  GenerateMasksAction.cpp  GenerateMasksAction.h  IcoSphereCreator.cpp  IcoSphereCreator.h  LoadDataAction.cpp  LoadDataAction.h  LoadProcessedDataAction.cpp  LoadProcessedDataAction.h  MSAC.cpp  MSAC.h  Plotwindow.cpp  Plotwindow.h  ProcessingDialog.cpp  ProcessingDialog.h  RefineMeshAction.cpp  RefineMeshAction.h  SaveProcessedDataAction.cpp  SaveProcessedDataAction.h  Shader.cpp  Shader.h  SphereFit.cpp  SphereFit.h  UpdateResultsAction.cpp  UpdateResultsAction.h  Volume.cpp  Volume.h  VolumeSliceRender.cpp  (+4 more)
src/matlab/: libIso.lib
src/matlab/linux/: libIso.h
src/matlab/msvc/: libIso.h  libIso.lib
src/ui/: ConfocalDockWidget.ui  ConfocalMainWindow.ui  ConfocalSliceView.ui  PlotWindow.ui  ProcessingDialog.ui
